# eigen-secret

./: .account.json.Alice  .account.json.Bob  .commitlintrc.js  .contract.json  .env  .env.sample  .eslintignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .solhint.json  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.tpl  eigen-secret-common-setup.sh  hardhat.config.js  hardhat.config.ts  index.html  index.js  index.ts  lerna.json  modules.html  package-lock.json  package.json  test.sh  tsconfig.json
aggregation/: package.json
api/: README.md  account.ts  app.ts  db.ts  log.ts  note.ts  service.ts  session.ts  transaction.ts  util.ts
assets/: highlight.css  search.js
circuits/: account.circom  account_main.input.json  account_note.circom  account_note_compressor.circom  cerc20_update_state_verifier.circom  deposit.circom  digest.circom  eff_ecdsa.circom  erc721_update_state_verifier.circom  if_gadgets.circom  input.json  join_split.circom  log_substitution.json  main.circom  main_account.circom  main_account.input.json  main_joinsplit.circom  main_joinsplit.input.json  main_update_state.circom  main_update_state.input.json  main_withdraw.input.json  note_compressor.circom  nullifier_function.circom  nullifier_tree.circom  pedersen_comm_plus_range_proof.circom  proof.json  rollup.circom  run.sh  run_zkit.sh  secp256k1_scalar_mult_cached_windowed.circom  setup_2^15.key  state_tree.circom  test_aggregation.sh  update_state.circom  update_state_verifier.circom  withdraw_signature_verifier.r1cs  zkit_test_update_state.sh  zktx.circom
classes/: NoteClient.html  ProofClient.html  SecretSDK.html  StateTreeClient.html  TransactionClient.html  account.AccountCircuit.html  account.EigenAddress.html  account.SecretAccount.html  account.SigningKey.html  aes.Aes256gcm.html  error.AppError.html  error.AppResp.html  joinsplit.JoinSplitCircuit.html  (+17 more)
prover/: Cargo.toml  client.js
prover/src/: main.rs
(+498 files in other folders)
