[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", package = "plonky", version = "0.0.2" }
bytes = "1.4"
log = "0.4"
iovec = "0.1"
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
futures = "0.3.28"
anyhow = "1.0.34"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
num_cpus = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
