[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", package = "plonky", version = "0.0.2" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
serde = { version = "1.0", features = [ "derive" ] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
